Support for open JDK 21 by updating dependencies (#647)